Post a new article
Addition:
- customCSS removes max-width of container
- customized config.toml
- images under static folder

--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,42 @@
 baseurl = "/"
-title = "Mainroad"
+#title = "Blog"
 languageCode = "en-us"
-paginate = "10" # Number of posts per page
+paginate = "4" # Number of posts per page
 theme = "mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 
 [Author]
-  name = "John Doe"
-  bio = "John Doe's true identity is unknown. Maybe he is a successful blogger or writer. Nobody knows it."
-  avatar = "img/avatar.png"
+  name = "Dennis Lee"
+  bio = "Accounting / Financial Perfectionist. Studied accounting as a master degree, worked as a research analyst & fund manager, and a cashflow accounting perfectionist."
+  avatar = "images/coffeebear.png"
 
 [Params]
-  description = "John Doe's Personal blog about everything" # Description of your site
+#
+# Only one section (with the most posts) will be displayed on the main page by default.
+# Tip: You can show as many sections as you like with mainSections config parameter. 
+  mainSections = ["post"] # appear on main section
+  copyright = "All Right Reserved | FX-Git" 
   opengraph = true
   twitter_cards = false
   readmore = false # Show "Read more" button in list if true
   authorbox = true
   pager = true
   post_meta = ["date", "categories"] # Order of post meta information
+  customCSS = ["css/custom.css"]
 
 [Params.logo]
-  subtitle = "Just another site" # Logo subtitle
+#
+# Header leave empty
+#  image = "images/coffeebear.png"
+#  subtitle = "Just another Metatrader site" # Logo subtitle
 
 [Params.sidebar]
   home = "right"   # Configure layout for home page
   list = "right"   # Configure layout for list pages
   single = "right" # Configure layout for single pages
   # Enable widgets in given order
-  widgets = ["search", "recent", "categories", "taglist"]
+  widgets = ["recent", "categories", "taglist"]
 
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
