Continuous deployment to fxgit.netlify.app
(1) R and Python articles are saved under folder content/post/
- public

(2) Metatrader drafts are saved under folder content/Portfolio/
- hidden copy of Wordpress post (copy and paste plugin wp-githuber-md)
- change relative path images/ to absolute path url/img/ in markdown
- categories and tags are manually added to Wordpress post
- uncomment front matter to make public

(3) Wordpress hosted at Namecheap Stellar Plus fxgit.work

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 [Author]
   name = "Dennis Lee"
   bio = "Accounting / Financial Perfectionist. Studied accounting as a master degree, worked as a research analyst & fund manager, and a cashflow accounting perfectionist."
-  avatar = "images/coffeebear.png"
+  avatar = "img/coffeebear.png"
 
 [Params]
 #
@@ -28,7 +28,7 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 [Params.logo]
 #
 # Header leave empty
-#  image = "images/coffeebear.png"
+#  image = "img/coffeebear.png"
 #  subtitle = "Just another Metatrader site" # Logo subtitle
 
 [Params.sidebar]
