--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://fxgit.netlify.app/"
 #title = "Blog"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
@@ -19,10 +19,10 @@ name = "Dennis Lee"
 authorbox = true 
 copyright = "All Right Reserved | FX-Git" 
 customCSS = ["css/custom.css"] 
-mainSections = ["post"] # appear on main section               
+mainSections = ["post"] # appear on main section                   
 opengraph = true 
 pager = true 
-post_meta = ["date", "categories"] # Order of post meta information               
+post_meta = ["date", "categories"] # Order of post meta information                   
 readmore = false # Show "Read more" button in list if true
 twitter_cards = false 
 
